--- a/src/App.css
+++ b/src/App.css
@@ -30,6 +30,10 @@
   margin-bottom: 1rem;
 }
 
+.labelx2 {
+  font-size: 1.5rem;
+  margin-bottom: 1rem;
+}
 .input {
   font-size: 1.6rem;
   padding: 0.5rem 2rem;
