:construction: Expanding Searches
introduce searchResults to handle filtering to know which result to render based on user's search

--- a/src/App.css
+++ b/src/App.css
@@ -16,6 +16,11 @@
   padding: 40px;
 }
 
+.search-box {
+  margin: 0 20px;
+  padding: 8px;
+}
+
 .title {
   font-size: 4.4rem;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
